Fedora/Wayland : color picking broken #106264

Closed
opened 2023-03-29 12:28:33 +02:00 by Philipp Oeser · 4 comments
Member

System Information
Operating system: Linux-6.1.18-200.fc37.x86_64-x86_64-with-glibc2.36 64 Bits
Graphics card: AMD Radeon Graphics (renoir, LLVM 15.0.7, DRM 3.49, 6.1.18-200.fc37.x86_64) AMD 4.6 (Core Profile) Mesa 22.3.7

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-26 14:59, hash: 2f4a7d67b7b8

Caused/exposed by: 70ef334f08

Short description of error
Fedora/Wayland : color picking broken

Exact steps for others to reproduce the error

  • try to pick a color using the eyedopper anywhere in blender, nothing happens
  • try to use the eyedropper tool in greasepencil draw mode, it alwasy picks black

Culprit commit changed a path to libwayland-egl.so.1 which is present on my system in /lib64/libwayland-egl.so.1 (a link to libwayland-egl.so.1.21.0)

WITH_GHOST_WAYLAND=OFF fixes the problem

I do have a nvidia GPU (set to be the primary GPU in /etc/X11/xorg.conf.d/nvidia.conf), will check why that seems to not be in use atm...

**System Information** Operating system: Linux-6.1.18-200.fc37.x86_64-x86_64-with-glibc2.36 64 Bits Graphics card: AMD Radeon Graphics (renoir, LLVM 15.0.7, DRM 3.49, 6.1.18-200.fc37.x86_64) AMD 4.6 (Core Profile) Mesa 22.3.7 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-03-26 14:59, hash: `2f4a7d67b7b8` Caused/exposed by: 70ef334f085c0c6c328a6e04357bec7085102c21 **Short description of error** Fedora/Wayland : color picking broken **Exact steps for others to reproduce the error** - try to pick a color using the eyedopper anywhere in blender, nothing happens - try to use the eyedropper tool in greasepencil draw mode, it alwasy picks black Culprit commit changed a path to `libwayland-egl.so.1` which is present on my system in /lib64/libwayland-egl.so.1 (a link to libwayland-egl.so.1.21.0) `WITH_GHOST_WAYLAND=OFF` fixes the problem I do have a nvidia GPU (set to be the primary GPU in /etc/X11/xorg.conf.d/nvidia.conf), will check why that seems to not be in use atm...
Philipp Oeser added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-29 12:28:33 +02:00
Philipp Oeser added
Module
EEVEE & Viewport
Status
Confirmed
Platform
Linux
and removed
Status
Needs Triage
labels 2023-03-29 12:41:42 +02:00
Author
Member

CCing @ideasman42 since it was his commit.

I assume this has to do with the AMD GPU, still need to figure out how to actually have blender use the NVidia card as primary GPU (even tough it is set as primary GPU generally...)

CCing @ideasman42 since it was his commit. I assume this has to do with the AMD GPU, still need to figure out how to actually have blender use the NVidia card as primary GPU (even tough it is set as primary GPU generally...)

Double checked and the color picker is working with NVidia drivers, I have an AMD GPU too (but need to physically swap it in).

Operating system: Linux-6.2.10-arch1-1-x86_64-with-glibc2.37 64 Bits, WAYLAND UI
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 530.41.03

@lichtwerk could you please check the following:

  • Does making a screenshot work? (this may be related to #98462), where EGL_BUFFER_PRESERVED may not be supported causing sampling the buffer to fail.
  • Does this problem also happen with software OpenGL? (Blender with LIBGL_ALWAYS_SOFTWARE).

Note that in general AMD support for Wayland seems much better than AMD, so it's surprising AMD has this problem.

Double checked and the color picker is working with NVidia drivers, I have an AMD GPU too (but need to physically swap it in). ``` Operating system: Linux-6.2.10-arch1-1-x86_64-with-glibc2.37 64 Bits, WAYLAND UI Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 530.41.03 ``` @lichtwerk could you please check the following: - Does making a screenshot work? (this may be related to #98462), where `EGL_BUFFER_PRESERVED` may not be supported causing sampling the buffer to fail. - Does this problem also happen with software OpenGL? (Blender with LIBGL_ALWAYS_SOFTWARE). Note that in general AMD support for Wayland seems much better than AMD, so it's surprising AMD has this problem.
Author
Member

@lichtwerk could you please check the following:

  • Does making a screenshot work? (this may be related to #98462), where EGL_BUFFER_PRESERVED may not be supported causing sampling the buffer to fail.

Yep, screenshots work on my end (they are not black)

  • Does this problem also happen with software OpenGL? (Blender with LIBGL_ALWAYS_SOFTWARE).

Yes, still a problem then

> @lichtwerk could you please check the following: > > - Does making a screenshot work? (this may be related to #98462), where `EGL_BUFFER_PRESERVED` may not be supported causing sampling the buffer to fail. Yep, screenshots work on my end (they are not black) > - Does this problem also happen with software OpenGL? (Blender with LIBGL_ALWAYS_SOFTWARE). > Yes, still a problem then
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-16 12:18:47 +02:00

This was in fact the same issue as #98462, just a different call to reading pixel information from the window. Now a ghost capabilities flag is used to check if reading from the front-buffer is supported.

This was in fact the same issue as #98462, just a different call to reading pixel information from the window. Now a ghost capabilities flag is used to check if reading from the front-buffer is supported.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106264
No description provided.