intern/ghost/intern/GHOST_SystemWayland.cc
@@ -6762,7 +6762,10 @@ GHOST_TCapabilityFlag GHOST_SystemWayland::getCapabilities() const
           GHOST_kCapabilityWindowPosition |
           /* WAYLAND doesn't support setting the cursor position directly,
            * this is an intentional choice, forcing us to use a software cursor in this case. */
-          GHOST_kCapabilityCursorWarp));
+          GHOST_kCapabilityCursorWarp |
+          /* Some drivers don't support back-buffer reading, see: #98462 & #106264.
+           * We could inspect the graphics card driver - for now just disable on WAYLAND. */
+          GHOST_kCapabilityGPUReadFrontBuffer));
 }
 
 bool GHOST_SystemWayland::cursor_grab_use_software_display_get(const GHOST_TGrabCursorMode mode)
